--- a/danusys-commons-app/pom.xml
+++ b/danusys-commons-app/pom.xml
@@ -63,7 +63,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
-<!-- FileUtil 에 사용되는 dependency-->
+        <!-- FileUtil 에 사용되는 dependency-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -88,6 +88,19 @@
             <version>3.17</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.navercorp.lucy</groupId>
+            <artifactId>lucy-xss-servlet</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
